# gplot2

./: .gitignore  .modgitproject  README.md  export-all.sh  import-all.sh  obreadmegen  split-files.sh
dimfm-library/: abet.f  altpen.f  alttyp.f  autd.f  autor.f  autord.f  autort.f  autot.f  autox.f  autoxy.f  autoy.f  axcut.f  axtik.f  blank.f  blkdata.f  bounds.f  box.f  brksym.f  celar.f  celar1.f  celmap.f  celsc.f  celscr.f  cetar.f  cetsc.f  cetscr.f  cfmt.f  check.f  chhalf.f  cinter.f  cirarc.f  circle.f  clabel.f  clabht.f  cmodel.f  cmy.f  cmy1.f  cmy2.f  cmy3.f  color.f  (+508 more)
dimts-library/: build.src  dimtest.f  lstdfon.f
gplot-library/: build.src  dadimfo.src  ftgplot.f
grdev-library/: a12cmn.cmn  dfxpcn.cmn  dfxpsn.cmn  epblkd.f  epsdim.f  epsnam.f  epsrut.f  ftsvg.f  gtcmn.cmn  psbegn.f  psclr.f  psend.f  psmove.f  psrgbc.f  pswid.f  svgblkd.f  svgcmn.cmn  tekadd.f  tekcmn.cmn  tektst.f
historic/: README.md
nos-files/: prlogin  send-files.sh
obey-files/: GPLPROC  daeg1  daeg2  daeg3  daeg4  fetch-list  get-images-list.sh  get-required-list.sh  gplproc  obaleps  obalsvg  obaltst  obangsm  obblk1  obbzcrc  obcht1  obcht2  obcrvev  obcurve  obdemo  obdiag  obdiag2  obeqn  obfin  obfleur  obfont  obfrcgo  obfrcsm  obfrcsp  obfrctl  obfuncs  obgd01  obgf28a  obgf28b  obgf28c  obgf28d  obgf28m  obgf28r  obgfi18  obgfx18  (+54 more)
plget-jobs/: generate-get-jobs.sh  make-plget-job.sh
plsources/: get-plsources.sh
procs-library/: build.src  crayins.src  craypex.src  crayput.src  crayrun.src  csub612.src  doc.asc  doc.src  ftnsys.src  install.src  jobs.src  lf.src  libdel.src  libget.src  liblist.src  libput.src  linkpgm.src  login.src  modcomp.src  moddel.src  modedit.src  modexec.src  modget.src  modlist.src  modput.src  modputw.src  modview.src  pl2src.src  print.src  psprint.src  qget612.src  rcopy.src  redir.src  rshow.src  sendfl.src  src2pl.src  termsel.src  tlbdel.src  tlbedit.src  tlbget.src  (+3 more)
tools/: cond.json  epsview.sh  export-modify.sh  import-modify.sh  install.sh  lastspool.sh  make-plget-job.sh  mini_telnetd.patch  modgitedit.sh  modgitinit.sh  modjoin.py  modsplit.py  nosftp.py  runrbf.exp  runrbf.sh  runrje.sh  setupenv  svgviewall.sh  testcond.f
tools/nostools/: LICENSE  README.md  pyproject.toml
tools/nostools/nostools/: __init__.py  asciify.py  awdecode.py  modjoin.py  modsplit.py  nosftp.py  sgformat.py  svgview.py  trimcends.py  vmsftp.py
tutorial/: build.sh  tutorial.html  tutorial.md
utils-library/: build.src  cgetjn.src  chars.f  cmchars.cmn  cuhash.src  docutls.asc  docutls.src  filedt.f  filedti.src  (+37 more)
(+867 files in other folders)
